--- a/docs/styles.css
+++ b/docs/styles.css
@@ -2,7 +2,7 @@
 :root{
     --white: hsl(0, 0%, 100%);
     --bg-main: hsl(212, 45%, 89%);
-    --color-text: hsl(220, 15%, 55%);
+    --color-text: rgb(123, 135, 157);
     --color-title: hsl(218, 44%, 22%);
 
 }
@@ -36,6 +36,9 @@ main{
     overflow: hidden;
     display: flex;
     flex-direction: column;
+    box-shadow: 8px 14px 56px 13px rgba(123,135,157,0.45);
+    -webkit-box-shadow: 8px 14px 56px 13px rgba(123,135,157,0.45);
+    -moz-box-shadow: 8px 14px 56px 13px rgba(123,135,157,0.45);
 
 }
 
